# simple-pulumi-crud

./: .gitignore  Dockerfile  LICENSE  README.md  flask.cfg  pyproject.toml  setup.cfg  simple-pulumi-crud-collection.postman_collection.json  tox.ini
.github/workflows/: black.yml  linter.yml  release.yml  test.yml
pulumi/: Pulumi.yaml  __main__.py  requirements.txt
simple-pulumi-crud/: app.py  dynamo_util.py  flask_api.py
simple-pulumi-crud/blueprints/user/: __init__.py
simple-pulumi-crud/models/: request.py  response.py  status_type.py
src/: dynamo_util.py
src/blueprints/user/: __init__.py
src/models/: request.py
